@@ -71,3 +71,4 @@ Jul 16 1998	 Change default value of xpndw to 0.2 nm
 Aug 07 1998	 Initilization bug fix in pre_misfit
 Aug 07 1998	 Initilization bug fix in pre_short
 Aug 10 1998	 Add missing initialization angle constraints
+Aug 13 1998	 Add POx in charge determination
